src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-omT-ofT-b.snap
---
source: src/tests/window_opening.rs
description: "config:\nwindow-rule {\n    open-fullscreen false\n    open-maximized true\n    open-floating true\n    border { on; }\n}"
expression: snapshot
snapshot_kind: text
---
initial configure:
size: 0 × 0, bounds: 1272 × 712, states: []

post-map configures:
size: 1 × 1, bounds: 1272 × 712, states: [Activated]
